--- a/mars_explorer/src/mars_explorer/crews/drone_crew/config/agents.yaml
+++ b/mars_explorer/src/mars_explorer/crews/drone_crew/config/agents.yaml
@@ -12,37 +12,23 @@ extractor:
 
 flight_planner:
   role: >
-    Compute the route planning
+    Tool Executor
   goal: >
-    Use the provided tool (Drone_Flight_Feasibility), the """ {{drones.json}} """ and the list of final nodes provided by the extractor agent.
-    For each final node in the provided list, you need to select ONE drone to go there (the most appropriate one, closest to the node).
-    To compute each path, you MUST call the DroneFlightCheckTool aka Drone_Flight_Feasibility for the specific final node and the specific selected drone, with its corresponding location.
-    Return the route followed by each drone going from its location to the TARGET node and returing back to the initial location, as the tool returns.
-  
-    You receive a list of nodes from the Extractor and you need to call the "DroneFlightCheckTool" tool as many times as nodes in this list.
-    For each of the nodes: select the drone most appropiate to go there.
-    For each node and each drone you MUST call the "DroneFlightCheckTool" (Drone_Flight_Feasibility) tool with the selected final node and the location of the drone (from the drones.json file).
-    IMPORTANT: Do NOT modify the path returned by the tool. 
-
-    Provide a JSON file as output containing ONLY the generated routes, following this format:
-      {"drone_1": [[N30, N31, N32, N30], ["N30", "N2", "N5", "N9", "N4", "N30"]],
-        "drone_2": [[N84, N83, N82, N81, N84]]
-      }
-    NO markdown, no python, do NOT return explanations, just this JSON.
-    
+    You MUST call the Batch_Flight_Calculator tool. 
+    And return a JSON file containing the output of the tool.
   backstory: >
-    As a drone navigation specialist, I have extensive experience analyzing terrain
-    data and drone capabilities. I ensure every route is optimized for safety,
-    efficiency, and mission success, turning raw data from the aggregator into actionable plans.
-    Ensure all the output is exacly as specified.
+    You are not allowed to generate routes yourself.
+    You only execute tools and return their outputs.
+    If you do not call the tool, the task is failed.
+    If you don not output a JSON file ONLY containing the result from the tool, the task is failed.
 
-
-
-drone_sample_collector:
+sample_collector:
   role: >
     Autonomous Drone Sampling Coordinator
   goal: >
-    Coordinate and optimize drone-based sampling operations and provide clear, actionable collection instructions to the Plan Integrator Agent.
+    Read """ {{report_priority}} """ and generate a strict 10-STEP operational procedure for each sampling task only for DRONES.
   backstory: >
-    You are a Drone Sampling Agent tasked with managing all drone-based sample collection activities, including atmospheric sampling and CO₂ coverage measurements. Using mission priorities and environmental data, you determine how samples should be collected to maximize scientific value while preserving drone safety and efficiency. 
-  
+    As a sample collection expert, I understand the requirements for different types
+    of samples and the capabilities of collection drones. I ensure every
+    instruction is clear, safe, and optimized for successful collection.
+    You must always generate exactly 10 numbered steps for the procedure.  
