new_flow Co-authored-by: Helena Sánchez <helenasanchezulloa@gmail.com>

--- a/mars_explorer/src/mars_explorer/crews/integration_crew/config/tasks.yaml
+++ b/mars_explorer/src/mars_explorer/crews/integration_crew/config/tasks.yaml
@@ -7,7 +7,7 @@ reporting_inconsistencies:
   expected_output: >
     A unified plan free of conflicts, together with a detailed explanation of what
     inconsistencies were identified and how they were solved.
-  agent: integrator
+  agent: integrator_rover
 
 verify_plan:
   description: >
